# 2D-particle-sim

./: .gitignore  README.md
2D-particle-sim/: make_portfolio_table.py  plot_cpu_omp_cuda.py  portfolio_speedup_table.md
2D-particle-sim/cpuSim/: CMakeLists.txt  build.sh  main.cpp  makefile  renderer.cpp  renderer.h  run_cpu_sweep.sh  run_omp_1t_match_cpu.sh  run_omp_sweep.sh  simulator.cpp  simulator.h  visualize.py
2D-particle-sim/gpuSim/: CMakeLists.txt  bench_cuda.sh  build.sh  main.cpp  makefile  particle_data.h  particle_sim  renderer.cpp  renderer.h  simulator_cuda.cu  simulator_cuda.cuh
